--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "@vue/test-utils": "^2.0.0-0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^7.0.0-0",
+    "speed-measure-webpack-plugin": "^1.4.2",
     "typescript": "~3.9.3",
-    "vue-jest": "^5.0.0-alpha.8"
+    "vue-jest": "^5.0.0-alpha.8",
+    "webpackbar": "^5.0.0-3"
   }
 }
